Allow listing & filtering geo_accession by series_id
